CHANGES.txt - 2009-01-28
------------------------

CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057)
	- The scheduler did not offer a configurable timeout for multi-file
	  print jobs.
	- The configure script incorrectly allowed Avahi to be used for DNS-SD
	  printer discovery (STR #3065)
	- The web interface and scheduler did not support URIs up to 1024 bytes
	  in length (STR #3072)
	- Fixed pdftops issues with page sizes (STR #3063)
	- Fixed pdftops issues with Ghostscript (STR #3062)
	- The scheduler incorrectly registered default profiles for PostScript
	  printers with no specified colorspace.
	- The scheduler incorrectly created an empty org.cups.printers.plist
	  file on Mac OS X.
	- cupsGetPPD3() did not look for local PPDs in the right directory.
	- SNMP lookups via side-channel did not work for NULL-VALUE and
	  and OCTET-STRING OIDs containing nul characters.
	- The libusb-based USB backend did not work.
	- The scheduler did not set the printer-commands attribute correctly
	  for some PPDs.
	- The ppdi utility did not work.
	- The web interface no longer uses multi-part output with old or broken
	  web browsers (STR #3049)
	- CUPS now conforms to the draft IPP/2.0 and IPP/2.1 specification.
	- Added a new cupsGetConflicts() API to get a list of conflicting
	  options.
	- The PPD compiler didn't localize options or choices that did not
	  have associated translation text (STR #3045)
	- Updated the Spanish localization (STR #3043)
	- Fixed build problems (STR #3040, STR #3047)
	- cupsResolveConflicts() did not resolve using the default option
	  choice in some cases due to the mirror UIConstraints that are
	  present in most PPD files.
	- The scheduler did not honor MIME type priorities.
	- The commandtops filter incorrectly used the JCLBegin code to end
	  its jobs.
	- The default BrowseLocalProtocols value was not set properly.
	- Since the commandtops filter does not actually support ReportLevels